bat.bool1.parottrouble.ParotTrouble.scala.error
Compilation error:
ParotTrouble:2: error: Boolean does not take parameters
  if(talking()==true){
            ^ParotTrouble:2: error: type mismatch;
 found   : Unit
 required: Boolean
  if(talking()==true){
  ^